<resources>
    <string name="app_nameEng" translatable="true">Hexadecimal Converter</string>
    <string name="enterHex" translatable="true">Enter your hexadecimal here:</string>
    <string name="enterDec" translatable="true">Enter your number here:</string>
    <string name="Enter" translatable="true">Enter</string>
    <string name="hexUnit" translatable="true">base 16</string>
    <string name="decUnit" translatable="true">base 10</string>
    <string name="hexValue" translatable="true">hex value</string>
    <string name="intValue" translatable="true">integer value</string>
    <string name="hereIsYourHex" translatable="true">Here is your hex:</string>
    <string name="goBack" translatable="true">go back</string>
    <string name="oneString">one string</string>
    <string name="spaced">spaced by byte</string>
    <string name="viewWithHexPrefix">hex prefix</string>
    <string name="swap">swap</string>
    <string name="alert">alert</string>
    <string name="dialogTitle">alert</string>
    <string name="dialogMessage">alert you can use these buttons</string>
    <string name="dialogPositiveButtonClose">close</string>
    <string name="notify">notify</string>
    <string name="notification_content_title">hexy Converty notify</string>
    <string name="notification_big_text">I got something for you! Press this notification to call 0210000000</string>
    <string name="notification_content_text">I got something for you!</string>
    <string name="animate">animate</string>
</resources>
