<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.DecToHexActivity">

    <LinearLayout
        android:layout_width="261dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/hereIsYourHex"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/hexValue"
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="17dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <TextView
                    android:id="@+id/hexValueUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hexUnit"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="vertical" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <RadioButton
                android:id="@+id/oneStringRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="changeHexView"
                android:text="@string/oneString" />

            <RadioButton
                android:id="@+id/spacedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeHexView"
                android:text="@string/spaced" />

            <RadioButton
                android:id="@+id/viewWithHexPrefixRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeHexView"
                android:text="@string/viewWithHexPrefix" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#05AAA5"
            android:textColor="@android:color/white"
            android:onClick="returnToMain"
            android:text="@string/goBack" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>